# config_tool_template

./: .gitignore  Jenkinsfile  README.md  pyproject.toml
ETC_ESC/v2/: _summit.toml  _tucson.toml
config_project/: config_loader.py
config_project/configs/tool1/: _summit.toml
config_project/configs/tool2/: README.rst  _init.toml
config_project/support_data/: README.md
configs/: common.toml
configs/tool1/: README.rst  _init.toml  benchtop.toml
configs/tool2/: README.rst  _summit.toml
docs/: example.ipynb
tests/: test_config_files.py
